--- a/backend/UmbracoDemo.csproj
+++ b/backend/UmbracoDemo.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Kjac.NoCode.DeliveryApi" Version="2.0.1" />
+    <PackageReference Include="Nikcio.UHeadless" Version="7.1.0" />
     <PackageReference Include="Umbraco.Cms" Version="15.2.1" />
   </ItemGroup>
 
