--- a/backend/UmbracoDemo.csproj
+++ b/backend/UmbracoDemo.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Clean" Version="5.0.0" />
     <PackageReference Include="Kjac.NoCode.DeliveryApi" Version="2.0.1" />
     <PackageReference Include="Nikcio.UHeadless" Version="7.1.0" />
     <PackageReference Include="Umbraco.Cms" Version="15.2.1" />
